# myforum

./: .gitignore  Forum.postman_collection.json  README.md
forum_backend/: Pipfile  db.sqlite3  init.ipynb  pyproject.toml
forum_backend/accounts/: admin.py  choices.py  forms.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  tests.py  validators.py
forum_backend/api/: permission.py  urls.py  validators.py
forum_backend/comments/: admin.py  apps.py  managers.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
forum_backend/data/: comments.json  creator.ipynb  tags.json  threads.json
forum_backend/fixtures/: forums.json  polls.json  threads.json  users.json
forum_backend/forum_backend/: asgi.py  celery_app.py  mixins.py  schema.py  settings.py  urls.py  utils.py  views.py  ws_middleware.py  wsgi.py
forum_backend/forums/: admin.py  choices.py  models.py  schema.py  tasks.py  tests.py  urls.py  validators.py  views.py
forum_backend/media/: stop_words.txt
forum_backend/moderation/: admin.py  models.py  tasks.py  tests.py  utils.py
forum_backend/notifications/: admin.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py
forum_backend/polls/: admin.py  choices.py  models.py  permissions.py  schema.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
forum_backend/tags/: admin.py  models.py  tests.py  validators.py
forum_backend/threads/: admin.py  apps.py  choices.py  conditions  managers.py  models.py  permissions.py  schema.py  (+4 more)
(+546 files in other folders)
