[project]
name = "forum-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autobahn>=25.12.2",
    "boto3>=1.42.88",
    "celery>=5.6.3",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.4",
    "django-axes>=8.3.1",
    "django-celery-beat>=2.9.0",
    "django-ckeditor-5>=0.2.20",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.3.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-imagekit>=6.1.0",
    "django-import-export>=4.4.0",
    "django-redis>=6.0.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "firebase-admin>=7.4.0",
    "flower>=2.0.1",
    "graphene-django>=3.2.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "stripe>=15.0.1",
    "tablib>=3.9.0",
    "thefuzz>=0.22.1",
    "unidecode>=1.4.0",
]
